# codex-buddy

./: .gitignore  README.md
buddy/: CLEAN_ROOM_SPEC.md  CODEX_WRAPPER_PORTING_CHECKLIST.md  CODEX_WRAPPER_PORT_SPEC.md  HOST_INTEGRATION_SPEC.md
docs/superpowers/plans/: 2026-04-07-buddy-missing-pieces.md  2026-04-07-buddy-wrapper-tui.md  2026-04-08-buddy-animation.md
docs/superpowers/specs/: 2026-04-08-buddy-animation-design.md
wrapper/: Cargo.toml
wrapper/prompts/: hatch.md  quip.md
wrapper/schemas/: hatch.schema.json  quip.schema.json
wrapper/src/: lib.rs  main.rs
wrapper/src/app/: event.rs  mod.rs  pty_input.rs  runtime.rs
wrapper/src/buddy/: animation.rs  events.rs  lifecycle.rs  mod.rs  policy.rs  quips.rs  roll.rs  sprites.rs  store.rs  summary.rs  types.rs
wrapper/src/codex/: exec.rs  home.rs  hooks.rs  launch.rs  mod.rs  pty.rs  relay.rs  session.rs
wrapper/src/ui/: buddy_pane.rs  layout.rs  mod.rs  pty_view.rs
wrapper/src/util/: paths.rs
wrapper/tests/: buddy_animation.rs  buddy_pane.rs  codex_exec.rs  codex_launch.rs  codex_overlay.rs  degraded_mode.rs  event_normalizer.rs  focus_menu.rs  hatch_actions.rs  layout_split.rs  pty_input.rs  pty_parser.rs  pty_view.rs  quip_policy.rs  review_regressions.rs  roll_determinism.rs  session_events.rs  session_root.rs  smoke_boot.rs  store_lifecycle.rs
