[package]
name = "buddy-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6"
fs4 = "0.9"
portable-pty = "0.8"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
unicode-width = "0.2"
uuid = { version = "1", features = ["serde", "v4"] }
vt100 = "0.15"

[dev-dependencies]
assert_cmd = "2"
pretty_assertions = "1"
tempfile = "3"
